--- a/EmployeeManagement/Web.config
+++ b/EmployeeManagement/Web.config
@@ -23,7 +23,7 @@
     </handlers>
   </system.webServer>
 	<connectionStrings>
-		<add name="EmployeeDBContext" connectionString="" providerName="System.Data.SqlClient" />
+		<add name="EmployeeDBContext" connectionString="workstation id=AutosDataTest.mssql.somee.com;packet size=4096;user id=inventoryclient_SQLLogin_1;pwd=wyhykoy59n;data source=AutosDataTest.mssql.somee.com;persist security info=False;initial catalog=AutosDataTest;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
